[package]
name = "topohedral-tracing"
version = "0.0.1"
authors = ["John Ferguson <JAFerguson952@gmail.com>"]
edition = "2021"
repository = "https://github.com/TopoHedralLabs/topohedral-tracing"

[dependencies]
colored = "2.1.0"
log = {version = "0.4.22", features = ["std"]}

[features]
enable_trace = []

